# Dress-Up-Game

./: .gitignore
Dress-up/: CMakeLists.txt
Dress-up/src/: main.cpp
